--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.11.10",
     "@types/react": "18.2.48",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
